Commit al mester en su version del blogpost mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -3,9 +3,13 @@
         <title> Ek titulo del post </title>
         <link rel="stylesheet" href="css/estilos.css">
         
-    </head>
+    </head> 
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el párrafo de inicios</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título actractivo e interesante para el post</h1>
+                <p>Y este es el párrafo de inicio donde vamos a explicar cosas increibles que se pueden hacer</p>
+            </div>
+        </div>
     </body>
-</html>
+</html>     
