--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     </head> 
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Este es el título actractivo e interesante para el post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar cosas increibles que se pueden hacer</p>
