--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,5 @@
 <html>
-    <head>ienvenido</title>
+    <head>Bienvenido a hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
