--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,12 @@
 <html>
-    <head>Bienvenido a hyperblog 2.0</title>
+    <head>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
@@ -14,6 +16,9 @@
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
+	    <div id="footer">
+		Hecho con amor en Platzi &lt;3
+	    </div>
         </div>
     </body>
 </html>
